# quad

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_tests.sh
.github/workflows/: main.yml
data/: quad.service
data/migrations/versions/: 96604d5fc6ba_.py  cbd2831b73af_.py
migrations/: env.py
ndi/: finder.py
quad/: __init__.py  common.py  core.py  discord.py  extensions.py  games.py  matchers.py  models.py  record.py  stream.py  tools.py  youtube.py  zmq.py
quad/migrations/versions/: 5361c93ce532_initial_migration.py
quad/ndi/: lib.py  receiver.py
tests/: conftest.py  test_common.py  test_core.py  test_discord.py  test_games.py  test_matchers.py  test_record.py  test_youtube.py
